# mimir

./: .dockerignore  .env.example  .gitignore  .last_backup_path  .pre-commit-config.yaml  .repomixignore  API_REFERENCE.md  ARCHITECTURE.md  BENCHMARKING.md  CHANGELOG.md  CITATION.cff  CI_CD_PIPELINE.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.monitoring  INSTALLATION.md  LENS_INTEGRATION_PHASE1_SUMMARY.md  LICENSE  MAINTENANCE.md  MANIFEST.in  MCP_CONFIGURATION.md  MONITORING_README.md  NOTICE  PERFORMANCE_OPTIMIZATION_REPORT.md  PHASE4_PRODUCTION_DEPLOYMENT_SUMMARY.md  README.md  RELEASE_SUMMARY.md  REPOSITORY_CLEANUP_SUMMARY.md  SECURITY.md  SKALD_INTEGRATION_SUMMARY.md  TODO.md  TROUBLESHOOTING.md  VISION.md  bunfig.toml  docker-compose.install.yml  docker-compose.integrated.yml  (+22 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: ci.yml  cleanup-enforcement.yml  dependency-management.yml  deploy-integrated.yml  deploy-production.yml  deploy-staging.yml  monitoring.yml  performance.yml  pr-checks.yml  release.yml  security.yml
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: code_style_conventions.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
_meta/: baseline.json
benchmarks/: benchmark_runner.py
docs/: CONFIGURATION_MANAGEMENT.md  DEPENDENCY_MANAGEMENT.md  LENS_INTEGRATION_ARCHITECTURE.md  PRODUCTION_DEPLOYMENT.md  SECURITY_MIGRATION.md
docs/diagrams/: mcp-protocol.md  pipeline-flow.md  platform-abstraction.md  security-model.md  system-architecture.md
examples/: phase3_hybrid_demo.py
loadouts/core/: deep-intelligence-gathering.yml  quick-overview.yml
loadouts/experimental/: ai-assisted-refactoring.yml
loadouts/specialized/: security-focused-analysis.yml  typescript-deep-analysis.yml
ops/: docker-compose.monitoring.yml  security-hardening-checklist.md  verify-security-config.py
ops/alertmanager/: alertmanager.yml
ops/compose/: monitoring.yml
ops/grafana/dashboards/: dashboard.yml  mimir-business-dashboard.json  mimir-error-dashboard.json  mimir-performance-dashboard.json  mimir-pipeline-dashboard.json
ops/grafana/datasources/: prometheus.yml
ops/loki/: loki.yml
ops/nginx/: nginx.conf  nginx.integrated.conf
ops/otel/: otel-collector-config.yaml  otel-collector-integrated.yaml
ops/postgres/: init.sql  tuning.conf
ops/prometheus/: alerts.yml  prometheus.integrated.yml  prometheus.prod.yml  prometheus.yml
ops/prometheus/rules/: integrated-alerts.yml  mimir-alerts.yml
ops/promtail/: promtail-config.yml
ops/redis/: redis.conf
scripts/: README.md  build.py  config_manager.py  deploy-integrated.sh  deploy.sh  health-check.sh  install.bat  install.sh  leann  release.py  repomapper  security_audit.py  serena  setup_monitoring.py  setup_security.py  test_ollama_integration.py  trace_viewer.py  validate-dependency-system.py  validate-distribution.py  validate_deployment.py  validate_ollama_setup.py
src/: cli-simple.ts  cli.ts  server.ts  types.ts
src/config/: config.ts
src/mcp/: server.ts
src/pipeline/: discovery.ts  lens-client.ts  symbols.ts
src/repoindex/: __init__.py  config.py  config_migration.py  health.py  main_secure.py
src/repoindex/cli/: __init__.py  lens_test.py  mimir2_validate.py
src/repoindex/data/: __init__.py  schemas.py
src/repoindex/mcp/: __init__.py  enhanced_server.py  monitored_server.py  secure_server.py  server.py
src/repoindex/monitoring/: __init__.py  alerts.py  dashboard.py  metrics.py  tracing.py
src/repoindex/pipeline/: __init__.py  advanced_query_processor.py  ask_index.py  bundle.py  code_embeddings.py  discover.py  enhanced_search.py  gemini.py  hybrid_bundle.py  hybrid_code_embeddings.py  hybrid_discover.py  hybrid_indexing.py  hybrid_metrics.py  hybrid_query_engine.py  hybrid_search.py  hyde.py  integration_helpers.py  intelligent_ranking.py  leann.py  lens_client.py  lens_integration_helpers.py  llm_adapter.py  llm_adapter_factory.py  ollama.py  parallel_processor.py  performance_optimizer.py  raptor.py  (+13 more)
src/research/: intelligence-engine.ts  loadout-manager.ts  metrics-system.ts  swarm-reporter.ts  types.ts
src/utils/: filesystem.ts  logger.ts
tests/: __init__.py  conftest.py  setup.ts
tests/benchmarks/: __init__.py  test_performance.py
tests/integration/: README_OLLAMA_TESTING.md  __init__.py  cli-integration.test.ts  conftest.py  test_architecture_separation.py  test_ask_method_fix.py  test_cli_comprehensive.py  test_concurrent_scenarios.py  test_config_integration.py  test_end_to_end_comprehensive.py  test_end_to_end_workflows.py  test_full_pipeline.py  test_gemini_direct.py  test_gemini_integration.py  test_gemini_minimal.py  test_hybrid_pipeline.py  test_hybrid_query_engine.py  test_integrated_system.py.disabled  test_integration_complete.py  test_lens_foundation.py  test_lens_integration.py  test_mcp_data_extraction.py  test_mcp_functions.py  test_mcp_integration.py  test_mcp_ollama_integration.py  test_mcp_status.py  test_mimir_2_0_comprehensive.py.disabled  test_mimir_2_0_integration.py  test_ollama_config.py  test_pipeline_integration.py  test_pipeline_mock_integration.py  test_pipeline_simple.py  test_runner_comprehensive.py  test_simple_integration.py  test_specific_gemini.py
tests/performance/: test_hybrid_performance.py  test_mimir_2_0_performance.py  test_performance_scenarios.py
tests/security/: test_secrets_security.py
tests/unit/: __init__.py  config.test.ts  discovery.test.ts  filesystem.test.ts  intelligence-engine.test.ts  lens-client.test.ts  loadout-manager.test.ts  logger.test.ts  mcp-server.test.ts  metrics-system.test.ts  swarm-reporter.test.ts  symbols.test.ts  test_adapters.py  test_advanced_query_processor.py  test_basic_functionality.py  test_config.py  test_data_formats.py  test_error_handling.py  test_mcp_basic.py  test_mcp_server.py  test_query_engine.py  test_schemas.py  test_util_basic.py  types.test.ts
(+36 files in other folders)
